--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -1,9 +1,9 @@
 <div class="row">
   <div class="col-12 col-md-6">
     <div class="jumbotron">
-      <h1 class="display-3">Inscrições</h1>
+      <h1 class="display-3">Associados</h1>
       <p class="lead">
-        <button class="btn btn-primary btn-lg" role="button" (click)="reportAssociados()">Download</button>
+        <button class="btn btn-primary btn-lg" role="button" (click)="reportAssociados()">PDF</button>
       </p>
     </div>
   </div>
